WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88431
IndexedDB: Infinite recursion in IDBObjectStore.openCursor(key, legacy_constant)
https://bugs.webkit.org/show_bug.cgi?id=88431
Summary
IndexedDB: Infinite recursion in IDBObjectStore.openCursor(key, legacy_constant)
Joshua Bell
Reported
2012-06-06 10:17:50 PDT
IndexedDB: Infinite recursion in IDBObjectStore.openCursor(key, legacy_constant)
Attachments
Patch
(10.53 KB, patch)
2012-06-06 10:20 PDT
,
Joshua Bell
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joshua Bell
Comment 1
2012-06-06 10:20:06 PDT
Created
attachment 146058
[details]
Patch
Joshua Bell
Comment 2
2012-06-06 10:21:41 PDT
Originally noted in
https://bugs.webkit.org/show_bug.cgi?id=84894
View in context:
https://bugs.webkit.org/attachment.cgi?id=140537&action=review
> Source/WebCore/Modules/indexeddb/IDBObjectStore.cpp:301 > + return openCursor(context, key, direction, ec);
Should be keyRange, not key. This call leads to infinite recursion.
Joshua Bell
Comment 3
2012-06-06 10:22:00 PDT
alecflett@ please sanity check? tony@ - r?
Alec Flett
Comment 4
2012-06-06 10:57:01 PDT
LGTM
WebKit Review Bot
Comment 5
2012-06-06 14:01:30 PDT
Comment on
attachment 146058
[details]
Patch Clearing flags on attachment: 146058 Committed
r119615
: <
http://trac.webkit.org/changeset/119615
>
WebKit Review Bot
Comment 6
2012-06-06 14:01:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug