IndexedDB: Infinite recursion in IDBObjectStore.openCursor(key, legacy_constant) https://bugs.webkit.org/show_bug.cgi?id=88431

Reviewed by Tony Chang.

Source/WebCore:

Function was calling itself, rather than delegating to the correct (IDBKeyRange) overload.

Test: storage/indexeddb/legacy-constants.html

* Modules/indexeddb/IDBObjectStore.cpp:
(WebCore::IDBObjectStore::openCursor):

LayoutTests:

* storage/indexeddb/legacy-constants-expected.txt:
* storage/indexeddb/resources/legacy-constants.js: Refactored and added test cases.
(populateStore):
(doChecks.doNext.request.onsuccess):
(doChecks.doNext.testWithKey.request.onsuccess):
(doChecks.doNext.testWithKey):
(doChecks.doNext):
(doChecks):


Canonical link: https://commits.webkit.org/106270@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119615 268f45cc-cd09-0410-ab3c-d52691b4dbfc